--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -30,7 +30,7 @@
     "                if file_name.endswith('.npy'):\n",
     "                    file_path = os.path.join(subset_dir, file_name)\n",
     "                    data.append(np.load(file_path))\n",
-    "                    labels.append(category)  # Using just the category as the label\n",
+    "                    labels.append(category)  \n",
     "\n",
     "    return np.array(data), np.array(labels)"
    ]
@@ -42,11 +42,9 @@
    "outputs": [],
    "source": [
     "def encode_labels(labels):\n",
-    "    # Encode categorical labels into integers\n",
     "    label_encoder = LabelEncoder()\n",
     "    integer_encoded = label_encoder.fit_transform(labels)\n",
     "\n",
-    "    # One-hot encode the integer labels\n",
     "    enc = OneHotEncoder( handle_unknown='ignore', sparse_output=False )\n",
     "    integer_encoded = integer_encoded.reshape(len(integer_encoded), 1)\n",
     "    onehot_encoded = enc.fit_transform(integer_encoded)\n",
@@ -115,19 +113,12 @@
    "outputs": [],
    "source": [
     "def create_dataframe(labels):\n",
-    "    # Get unique labels\n",
+    "    \n",
     "    unique_labels = np.unique(labels)\n",
-    "    \n",
-    "    # Encode the unique labels\n",
     "    onehot_encoded, label_encoder = encode_labels(unique_labels)\n",
-    "    \n",
-    "    # Create a DataFrame for the unique labels\n",
     "    df_labels = pd.DataFrame(unique_labels, columns=['Original_Labels'])\n",
-    "    \n",
-    "    # Create a DataFrame for the one-hot encoded labels\n",
     "    onehot_encoded_df = pd.DataFrame(onehot_encoded, columns=label_encoder.classes_)\n",
     "    \n",
-    "    # Concatenate the unique labels and one-hot encoded DataFrames\n",
     "    df = pd.concat([df_labels, onehot_encoded_df], axis=1)\n",
     "    \n",
     "    return df"
